# fastapi-sqlalchemy

./: .gitignore  pp.toml  pyproject.toml
examples/flaskr/flaskr/: __init__.py
examples/todo/: app.py
fastapi_sql/: __init__.py
src/fastapi_sqlalchemy/: __init__.py  extension.py  model.py  pagination.py  query.py  record_queries.py  session.py
tests/: init.py
